--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                src="images/example1.png"/>
           <dl class="color--cloud">
             <dt class="section__exampleTitle section__text--centered">
-              Work Example
+              Serverless
             </dt>
             <dd></dd>
           </dl>
@@ -92,7 +92,7 @@
                src="images/example2.png"/>
           <dl class="color--cloud">
             <dt class="section__exampleTitle section__text--centered ">
-              Work Example
+              Containers
             </dt>
             <dd></dd>
           </dl>
@@ -104,11 +104,9 @@
           <img alt="example screenshot of a project involving cats"
                class="section__exampleImage"
                src="images/example3.png"/>
-          <!-- “Bengal cat” by roberto shabs is licensed under CC BY 2.0
-               https://www.flickr.com/photos/37287295@N00/2540855181 -->
           <dl class="color--cloud">
             <dt class="section__exampleTitle section__text--centered">
-              Work Example
+              IaC
             </dt>
             <dd></dd>
           </dl>
@@ -124,8 +122,7 @@
 
     <section class="section section--alignCentered section--description">
       <p class="color--darkgrey section__description">
-        I am learning to code in the cloud! I like to work hard and learn new things.
-        I want to work for a company that will pay me to code in the cloud!
+        Learning this serverless thing.
       </p>
 
     <div class="background--skyBlue modal--closed">
