updating index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <section class="section section--alignCentered section--description">
       <p class="color--darkgrey section__description">
-        Learning this serverless thing.
+        Learning this serverless thing. Again.
       </p>
 
     <div class="background--skyBlue modal--closed">
