--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <section class="background--skyBlue section">
       <h2 class="color--cloud margin--none section__text--centered">
-        Portfolio
+        Serverless Portfolio
       </h2>
     </section>
 
