--- a/index.html
+++ b/index.html
@@ -70,49 +70,7 @@
       </h2>
     </section>
 
-    <section class="section section--alignCentered section--description">
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="A Serverless Portfolio"
-               class="section__exampleImage"
-               src="images/example1.png"/>
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered">
-              Serverless
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="example screenshot of a project involving chemistry"
-               class="section__exampleImage"
-               src="images/example2.png"/>
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered ">
-              Containers
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="example screenshot of a project involving cats"
-               class="section__exampleImage"
-               src="images/example3.png"/>
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered">
-              IaC
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-    </section>
+    <div id="example-work"></div>
 
     <section class="background--skyBlue section">
       <h2 class="color--cloud margin--none section__text--centered">
@@ -147,6 +105,6 @@
     </div>
 
     <script type="text/javascript" src="dist/bundle.js"></script>
-    
+
   </body>
 </html>
