added more bubbles

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <section class="section section--alignCentered section--description">
       <p class="color--darkgrey section__description">
-        Learning this serverless thing. Again.
+        Learning this serverless thing.
       </p>
 
     <script type="text/javascript" src="dist/bundle.js"></script>
